--- a/CSS/1.html
+++ b/CSS/1.html
@@ -2,7 +2,18 @@
 <html>
 <head>
    <title>Problem 1</title>
-   <link rel="stylesheet" type="text/css" href="1.css">
+   <style>
+       h1{
+    background-color: blue;
+    
+}
+div.container{
+    background-color: rgb(72, 141, 201);
+}
+.own{
+    background-color: skyblue;
+}
+ </style>
 </head>
 <body>
     <div class="container">
