--- a/HTML-CSS/TributePage/TributePage.html
+++ b/HTML-CSS/TributePage/TributePage.html
@@ -36,8 +36,21 @@
         </ul>
     </div>
     <div class="quote">
-        <h2>Quotes</h2>
-        
+        <h2>Honours</h2>
+        <ul>
+            <li><b>1997</b>-Bharat Ratna
+            <li><b>1981</b>-Padma Bhushan
+            <li><b>1990</b>-Padam Vibushan
+            <li><b>2009</b>-hoover medal
+            <li><b>1997</b>-Indira Gandhi Award for national integration
+            <li><b>1998</b>-Veer Savarkar Award
+            <li><b>2007</b>-King Charles II Award
+            <li><b>2011</b>-IEEE Honorary Award
+            <li><b>2000</b>-Ramanujan Award
+        </ul>
+    </div>
+    <div class="end">
+    <b> Let Us Make His Dream A Reality.</b>
     </div>
 </body>
 </html>
