--- a/HTML-CSS/Personal Portfolio/Portfolio.html
+++ b/HTML-CSS/Personal Portfolio/Portfolio.html
@@ -23,7 +23,7 @@
 
         <div class="txt">
             <span class="border">
-                Mayur's Portfolio
+                Mayur Borkar
             </span>
         </div>
         <div class="text">
@@ -33,39 +33,44 @@
         </div>
     </div>
     <section class="section sec1" id="about">
+        <img src="IMG_0826.jpg">
+
         <div class="info ">
             <h2> About Mayur</h2>
             <p>
                 I am currently in my final year studying electronics and communication
                 engineering in India. I've come to no that, ECE is not something of my taste. I found my true purpose in
-                programming: seeing how lines of code can instruct comptuers to do great things truely intriqued me. S o
-                I am currently in a journey to become the most profiecient programmer there ever lived. Follow me and my
+                programming seeing how lines of code can instruct comptuers to do great things truely intriqued me. So
+                I am currently in a journey to become the most profiecient programmer. Follow me and my
                 work. Hire me, I will work for free.My passion is to use technology based solutions, to help solve real
                 world challenges. </P>
 
         </div>
     </section>
+    
     <div class="img2" id="projects">
-
-        <div class="row">
-            <div class="column">
-                <h2>Cell Phone Operated Land Rover</h2>
-                <p>Traditionally, wireless controlled robots make use of RF (radio frequency) circuits, which have their disadvantages of restricted operational range, limited frequency range, and limited control. This project introduces the use of the mobile phone for robotic control.  This technology is more controller friendly as it doesn’t interfere with other controllers and can use up to twelve controls.  It also has the advantages of robust control and provides working range as large as the coverage area of the service provider. Although the look and capabilities of these robots vary, they share mechanically movable structures under some form of control.
-                </p>
+        
+        <div class="polaroid">
+            <img src="W1.jpg" style="width:100%">
+            <div class="container">
+                <p>A Free Website designed by me for an Organization.</p>
+                <p>Link <a href="http://shalaamachitumachi.org"> Click Here</a></p>
             </div>
-            <div class="column">
-                <h2>RFID Based Door Access Control</h2>
-                <p>The conception of entrance control is brought about by the mean of a card, a parallel card reader, and a control board that is amalgamated with the server. This is a proximity card with a unique ID number incorporated in it. The card reader interprets the data and sends it to the control board, which is a microcontroller. This microcontroller tests the legality of the data with the incorporated server, which abides the database. The attached server is uploaded with the details of the worker for that unique ID number.</p>
-            </div>
-            <!-- <div class="column">
-                <h2>Photography Site</h2>
-                <p>A photography site as a capgemini assignment.
-                    Link for assignment: 
-                    <a href="../Photography/Photography.html">Photography site</a>
-                </p>
-            </div> -->
         </div>
-
+        <div class="polaroid">
+            <img src="Realistic Rendering.png" style="width:100%">
+            <div class="container">
+                <p>A 3D concept for improved learning in colleges.</p>
+                <p>Project Name:- Realistic Rendering</p>
+            </div>
+        </div>
+        <div class="polaroid">
+            <img src="w2.jpeg" style="width:100%">
+            <div class="container">
+                <p>An IOT device to track the health of Patient.</p>
+                <p>Project Name:- Patient Monitoring and Security</p>
+            </div>
+        </div>
     </div>
     <section class="section sec2" id="skills">
         <h2>Competences</h2>
@@ -78,6 +83,7 @@
                 <li> Datastructures </li>
                 <li> HTML5 </li>
                 <li> CSS3 </li>
+                <li> Unreal Engine</li>
 
             </ul>
         </p>
