--- a/HTML-CSS/Photography/Photography.html
+++ b/HTML-CSS/Photography/Photography.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" media="screen" href="Photography.css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -10,27 +10,28 @@
     <div class="img1" id="home">
         <ul>
             <li>
-                <p>PHOTOGRAPHY SITE</p>
+                <p>Mercury Photography</p>
             </li>
-            <li style="float: right;"><a href="#about">About</a></li>
+            
             <li style="float: right;"><a href="#Composition">Composite</a></li>
             <li style="float: right;"><a href="#Wildlife">WildLfie</a></li>
             <li style="float: right;"><a href="#Aerial">Aerial</a></li>
             <li style="float: right;"><a href="#home">Home</a></li>
         </ul>
         <div class="txt">
-            <span class="border">
-                Welcome
+            <span class="border" >
+                Mercury
             </span>
         </div>
         <div class="text">
-            <span>
-                Swipe Down for Amazing pictures
-            </span>
+            <a href="#Aerial" class="button">View Work</a>
         </div>
     </div>
-    <div class="Aerial" id="Aerial">
-        <h2>Aerial Photography</h2>
+    <div  id="Aerial">
+    <h2>Aerial Photography</h2>
+    </div>
+    <div class="flex-container">
+
         <div class="polaroid">
             <img src="a1.jpg" style="width:100%">
             <div class="container">
@@ -50,8 +51,11 @@
             </div>
         </div>
     </div>
-    <div class="Wildlife" id="Wildlife">
-        <h2>Wildlife Photography</h2>
+    <div id="Wildlife">
+    <h2>Wildlife Photography</h2>
+    </div>
+    <div class="flex-container">
+
         <div class="polaroid">
             <img src="w1.jpg" style="width:100%">
             <div class="container">
@@ -71,8 +75,9 @@
             </div>
         </div>
     </div>
-    <div class="Composite" id="Composition">
-        <h2>Composite Photography</h2>
+    <h2>Composite Photography</h2>
+    <div class="flex-container" id="Composition">
+
         <div class="polaroid">
             <img src="c1.jpeg" style="width:100%">
             <div class="container">
