--- a/HTML-CSS/Form/form.html
+++ b/HTML-CSS/Form/form.html
@@ -40,7 +40,7 @@
 				</div>
 				
 				<div>
-					<label>Your City (single-select)</label>
+					<label>Your City </label>
 					<select id>
 						<option disabled selected value="--">Select Your City</option>
 						<option value="Bangalore">Bangalore</option>
@@ -51,8 +51,8 @@
 				<div>
 					<label>Favourite Foods (multi-select)</label>
 					<select multiple>
+						<option value="Burger">Burger</option>
 						<option value="Cheese">Cheese</option>
-						<option value="Bacon">Bacon</option>
 						<option value="Pasta">Pasta</option>
 						<option value="Pizza">Pizza</option>
 					</select>
