some more assignments

--- a/JavaScript/Assignments/Assignment_1.html
+++ b/JavaScript/Assignments/Assignment_1.html
@@ -1,27 +1,25 @@
 <html>
 
 <head>
-    <title>
-        Assignment 1
-    </title>
+  <title>
+    Assignment 1
+  </title>
 </head>
-<body style="text-align: center;" >
+
+<body style="text-align: center;">
   <label>Fahrenheit: </label>
   <input id="inputFahrenheit" type="number" name="input" placeholder="Fahrenheit" required>
-</p>
-<input type="submit" onclick="temperatureConverter()" value="Submit" />
- 
-<p>Celcius: <span id="outputCelcius"></span></p>
+  <input type="submit" onclick="temperatureConverter()" value="Submit" />
 
-<script>
-function temperatureConverter() {
-  valNum = document.getElementById("inputFahrenheit").value;
-  
+  <p>Celcius: <span id="outputCelcius"></span></p>
 
-  document.getElementById("outputCelcius").innerHTML=(valNum-32)/1.8 + " degree celcius";
- 
-}
-</script>
+  <script>
+    function temperatureConverter() {
+      valNum = document.getElementById("inputFahrenheit").value;
+      document.getElementById("outputCelcius").innerHTML = (valNum - 32) / 1.8 + " degree celcius";
+
+    }
+  </script>
 
 
 </body>
