--- a/JavaScript/Assignments/MyCalculator/MyCalculator.html
+++ b/JavaScript/Assignments/MyCalculator/MyCalculator.html
@@ -1,11 +1,16 @@
 <html>
-    <head>
 
-    </head>
+<head>
+
+</head>
+<link rel="stylesheet" type="text/css" media="screen" href="MyCalculator.css" />
+
 <body>
     <script src="MyCalculator.js"></script>
     <button onclick="myFunction()">Run Calculator</button>
-    <p>Output: <span id="ans"></span></p>
-    
+    <div>
+        <p>Output: <span id="ans"></span></p>
+    </div>
 </body>
+
 </html>
